--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             height: 100vh;
             color: #fff;
             font-family: 'Arial', sans-serif;
-            position: relative;
             text-align: center;
+            position: relative;
         }
 
         #confetti-container {
@@ -103,6 +103,9 @@
 
         .message audio {
             display: block;
+            width: 100%;
+            max-width: 300px;
+            margin-top: 20px;
         }
 
         audio {
@@ -140,6 +143,11 @@
 
             .message p {
                 font-size: 18px;
+            }
+
+            audio {
+                width: 100%;
+                max-width: 100%;
             }
         }
     </style>
