--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
     <div class="message" id="birthday-message">
         <img src="https://i.pinimg.com/564x/18/3e/a9/183ea975015aeb1c90eba8b254c1f57d.jpg" alt="Tarta de Cumpleaños">
         <p>¡Feliz Cumpleaños! Mejor amiga<br>💖🤩🥳</p>
-        <audio controls autoplay>
+        <audio id="birthday-audio" controls autoplay>
             <source src="cumple.mp3" type="audio/mpeg">
             Tu navegador no soporta el elemento de audio.
         </audio>
